Resolved: resolved layout issues

--- a/assets/sass/core/base.scss
+++ b/assets/sass/core/base.scss
@@ -10657,9 +10657,14 @@ div._3bqe5 {
   width: 378px;
   margin-left: 12px;
   height: 170px;
-  border: 1px solid rgba(103, 143, 185, 0.1);
   &:first-child {
     margin-left: 0;
+  }
+}
+
+@media screen and (min-width: 924px) {
+  ._2cP6X {
+    border: 1px solid rgba(103, 143, 185, 0.1);
   }
 }
 
